--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,8 @@
   "author": "webxiaoma",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.4.0",
+    "@vuepress/plugin-pwa": "^1.4.0",
     "vuepress": "^1.0.2"
   }
 }
-  
